# conductor

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  prompt.j2  pyproject.toml
.github/workflows/: ci.yml
scripts/: check_new_flaky.sh  check_new_pragmas.sh
src/conductor/: __init__.py  __main__.py  agent.py  cli.py  discovery.py  models.py  orchestrator.py  output.py  templating.py  tui.py
tests/: test_agent.py  test_cli.py  test_discovery.py  test_main.py  test_models.py  test_orchestrator.py  test_output.py  test_templating.py  test_tui.py
